some text in chapter 5, new ampere plot

--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -55,8 +55,7 @@ speed and translation quality. We argue that for better estimation of the
 benefits of \acl{nar} methods, the future research should take into account the
 methods employed in production-ready systems.
 
-\JH{refer to conclusions in chapter \ref{chap:conclusions} and conclude the
-  introduction}
+We conclude the thesis in Chapter \ref{chap:conclusions}.
 
 %%% Local Variables:
 %%% mode: latex
