--- a/thesis/03-nonautoregressive.tex
+++ b/thesis/03-nonautoregressive.tex
@@ -1026,7 +1026,9 @@ and \ac{nar} model variants might not be proportional.
 Moreover, even the Transformer base model can be trained in a better way than
 as reported by \citet{vaswani2017attention} and as referenced by many \ac{nat}
 papers as their baseline, achieving a better translation quality
-\citep{popel-bojar-2018-training}.
+\citep{popel-bojar-2018-training}. A reasonable improvement of the baseline
+could be achieved by training a student \ac{ar} model on the
+knowledge-distilled data.
 
 % -----------------------------------------------------------------------------
 \paragraph{Decoding Speed.} Similarly to the previous paragraph, baselines that
