--- a/thesis/img/throughputs/a100.tex
+++ b/thesis/img/throughputs/a100.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Sun 07 Nov 2021 04:41:40 PM GMT
+%% Mon 08 Nov 2021 06:15:48 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -54,105 +54,100 @@
 \draw[gp path] (1.872,7.691)--(1.872,0.985)--(12.947,0.985)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.338) {Decoding time (seconds)};
 \node[gp node center] at (7.409,0.215) {Batch size};
-\node[gp node right] at (12.031,7.280) {\acs{ar} Large};
+\node[gp node right] at (12.031,7.280) {Ar Large};
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,7.280)--(12.579,7.280);
-\draw[gp path] (6.297,7.691)--(6.618,6.849)--(8.201,4.727)--(9.783,3.503)--(11.365,2.980)%
-  --(12.947,2.650);
+\draw[gp path] (11.365,1.676)--(12.947,1.414);
 \gpsetpointsize{4.00}
-\gppoint{gp mark 1}{(6.618,6.849)}
-\gppoint{gp mark 1}{(8.201,4.727)}
-\gppoint{gp mark 1}{(9.783,3.503)}
-\gppoint{gp mark 1}{(11.365,2.980)}
-\gppoint{gp mark 1}{(12.947,2.650)}
+\gppoint{gp mark 1}{(11.365,1.676)}
+\gppoint{gp mark 1}{(12.947,1.414)}
 \gppoint{gp mark 1}{(12.397,7.280)}
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,6.818) {\acs{ar} Base};
+\node[gp node right] at (12.031,6.818) {Ar Base (stdnt)};
 \gpcolor{rgb color={0.800,0.800,0.800}}
 \draw[gp path] (12.215,6.818)--(12.579,6.818);
-\draw[gp path] (5.441,7.691)--(6.618,5.121)--(8.201,3.463)--(9.783,2.478)--(11.365,1.992)%
-  --(12.947,1.747);
-\gppoint{gp mark 2}{(6.618,5.121)}
-\gppoint{gp mark 2}{(8.201,3.463)}
-\gppoint{gp mark 2}{(9.783,2.478)}
-\gppoint{gp mark 2}{(11.365,1.992)}
-\gppoint{gp mark 2}{(12.947,1.747)}
+\draw[gp path] (6.618,4.078)--(8.201,2.661)--(9.783,1.878)--(11.365,1.515)--(12.947,1.312);
+\gppoint{gp mark 2}{(6.618,4.078)}
+\gppoint{gp mark 2}{(8.201,2.661)}
+\gppoint{gp mark 2}{(9.783,1.878)}
+\gppoint{gp mark 2}{(11.365,1.515)}
+\gppoint{gp mark 2}{(12.947,1.312)}
 \gppoint{gp mark 2}{(12.397,6.818)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.356) {Large};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \draw[gp path] (12.215,6.356)--(12.579,6.356);
-\draw[gp path] (1.872,4.150)--(3.454,3.284)--(5.036,2.791)--(6.618,2.550)--(8.201,2.427)%
-  --(9.783,2.339)--(11.365,2.274)--(12.947,2.233);
-\gppoint{gp mark 3}{(1.872,4.150)}
-\gppoint{gp mark 3}{(3.454,3.284)}
-\gppoint{gp mark 3}{(5.036,2.791)}
-\gppoint{gp mark 3}{(6.618,2.550)}
-\gppoint{gp mark 3}{(8.201,2.427)}
-\gppoint{gp mark 3}{(9.783,2.339)}
-\gppoint{gp mark 3}{(11.365,2.274)}
-\gppoint{gp mark 3}{(12.947,2.233)}
+\draw[gp path] (1.872,2.554)--(3.454,1.851)--(5.036,1.497)--(6.618,1.331)--(8.201,1.249)%
+  --(9.783,1.202)--(11.365,1.175)--(12.947,1.160);
+\gppoint{gp mark 3}{(1.872,2.554)}
+\gppoint{gp mark 3}{(3.454,1.851)}
+\gppoint{gp mark 3}{(5.036,1.497)}
+\gppoint{gp mark 3}{(6.618,1.331)}
+\gppoint{gp mark 3}{(8.201,1.249)}
+\gppoint{gp mark 3}{(9.783,1.202)}
+\gppoint{gp mark 3}{(11.365,1.175)}
+\gppoint{gp mark 3}{(12.947,1.160)}
 \gppoint{gp mark 3}{(12.397,6.356)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.894) {Base};
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,5.894)--(12.579,5.894);
-\draw[gp path] (1.872,2.934)--(3.454,2.222)--(5.036,1.851)--(6.618,1.688)--(8.201,1.604)%
-  --(9.783,1.552)--(11.365,1.520)--(12.947,1.500);
-\gppoint{gp mark 4}{(1.872,2.934)}
-\gppoint{gp mark 4}{(3.454,2.222)}
-\gppoint{gp mark 4}{(5.036,1.851)}
-\gppoint{gp mark 4}{(6.618,1.688)}
-\gppoint{gp mark 4}{(8.201,1.604)}
-\gppoint{gp mark 4}{(9.783,1.552)}
-\gppoint{gp mark 4}{(11.365,1.520)}
-\gppoint{gp mark 4}{(12.947,1.500)}
+\draw[gp path] (1.872,2.391)--(3.454,1.745)--(5.036,1.399)--(6.618,1.246)--(8.201,1.167)%
+  --(9.783,1.127)--(11.365,1.106)--(12.947,1.093);
+\gppoint{gp mark 4}{(1.872,2.391)}
+\gppoint{gp mark 4}{(3.454,1.745)}
+\gppoint{gp mark 4}{(5.036,1.399)}
+\gppoint{gp mark 4}{(6.618,1.246)}
+\gppoint{gp mark 4}{(8.201,1.167)}
+\gppoint{gp mark 4}{(9.783,1.127)}
+\gppoint{gp mark 4}{(11.365,1.106)}
+\gppoint{gp mark 4}{(12.947,1.093)}
 \gppoint{gp mark 4}{(12.397,5.894)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.432) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,5.432)--(12.579,5.432);
-\draw[gp path] (1.872,2.106)--(3.454,1.716)--(5.036,1.516)--(6.618,1.427)--(8.201,1.376)%
-  --(9.783,1.350)--(11.365,1.335)--(12.947,1.323);
-\gppoint{gp mark 5}{(1.872,2.106)}
-\gppoint{gp mark 5}{(3.454,1.716)}
-\gppoint{gp mark 5}{(5.036,1.516)}
-\gppoint{gp mark 5}{(6.618,1.427)}
-\gppoint{gp mark 5}{(8.201,1.376)}
-\gppoint{gp mark 5}{(9.783,1.350)}
-\gppoint{gp mark 5}{(11.365,1.335)}
-\gppoint{gp mark 5}{(12.947,1.323)}
+\draw[gp path] (1.872,1.723)--(3.454,1.401)--(5.036,1.220)--(6.618,1.145)--(8.201,1.103)%
+  --(9.783,1.082)--(11.365,1.070)--(12.947,1.065);
+\gppoint{gp mark 5}{(1.872,1.723)}
+\gppoint{gp mark 5}{(3.454,1.401)}
+\gppoint{gp mark 5}{(5.036,1.220)}
+\gppoint{gp mark 5}{(6.618,1.145)}
+\gppoint{gp mark 5}{(8.201,1.103)}
+\gppoint{gp mark 5}{(9.783,1.082)}
+\gppoint{gp mark 5}{(11.365,1.070)}
+\gppoint{gp mark 5}{(12.947,1.065)}
 \gppoint{gp mark 5}{(12.397,5.432)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.970) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,4.970)--(12.579,4.970);
-\draw[gp path] (1.872,1.830)--(3.454,1.535)--(5.036,1.403)--(6.618,1.338)--(8.201,1.302)%
-  --(9.783,1.285)--(11.365,1.272)--(12.947,1.264);
-\gppoint{gp mark 6}{(1.872,1.830)}
-\gppoint{gp mark 6}{(3.454,1.535)}
-\gppoint{gp mark 6}{(5.036,1.403)}
-\gppoint{gp mark 6}{(6.618,1.338)}
-\gppoint{gp mark 6}{(8.201,1.302)}
-\gppoint{gp mark 6}{(9.783,1.285)}
-\gppoint{gp mark 6}{(11.365,1.272)}
-\gppoint{gp mark 6}{(12.947,1.264)}
+\draw[gp path] (1.872,1.504)--(3.454,1.286)--(5.036,1.171)--(6.618,1.107)--(8.201,1.082)%
+  --(9.783,1.067)--(11.365,1.059)--(12.947,1.055);
+\gppoint{gp mark 6}{(1.872,1.504)}
+\gppoint{gp mark 6}{(3.454,1.286)}
+\gppoint{gp mark 6}{(5.036,1.171)}
+\gppoint{gp mark 6}{(6.618,1.107)}
+\gppoint{gp mark 6}{(8.201,1.082)}
+\gppoint{gp mark 6}{(9.783,1.067)}
+\gppoint{gp mark 6}{(11.365,1.059)}
+\gppoint{gp mark 6}{(12.947,1.055)}
 \gppoint{gp mark 6}{(12.397,4.970)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.508) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,4.508)--(12.579,4.508);
-\draw[gp path] (1.872,1.413)--(3.454,1.274)--(5.036,1.200)--(6.618,1.164)--(8.201,1.148)%
-  --(9.783,1.139)--(11.365,1.134)--(12.947,1.131);
-\gppoint{gp mark 7}{(1.872,1.413)}
-\gppoint{gp mark 7}{(3.454,1.274)}
-\gppoint{gp mark 7}{(5.036,1.200)}
-\gppoint{gp mark 7}{(6.618,1.164)}
-\gppoint{gp mark 7}{(8.201,1.148)}
-\gppoint{gp mark 7}{(9.783,1.139)}
-\gppoint{gp mark 7}{(11.365,1.134)}
-\gppoint{gp mark 7}{(12.947,1.131)}
+\draw[gp path] (1.872,1.289)--(3.454,1.159)--(5.036,1.097)--(6.618,1.067)--(8.201,1.052)%
+  --(9.783,1.046)--(11.365,1.041)--(12.947,1.039);
+\gppoint{gp mark 7}{(1.872,1.289)}
+\gppoint{gp mark 7}{(3.454,1.159)}
+\gppoint{gp mark 7}{(5.036,1.097)}
+\gppoint{gp mark 7}{(6.618,1.067)}
+\gppoint{gp mark 7}{(8.201,1.052)}
+\gppoint{gp mark 7}{(9.783,1.046)}
+\gppoint{gp mark 7}{(11.365,1.041)}
+\gppoint{gp mark 7}{(12.947,1.039)}
 \gppoint{gp mark 7}{(12.397,4.508)}
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
