--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -122,9 +122,17 @@
 
 * Translation on WMT 14
 
-  |-------+---+---|
-  | Model |   |   |
-  |       |   |   |
+  |-------+------------+-----------------+-------------+-----------------+-------------+-----------------+-------------+-----------------|
+  | Model | En-De 300k | En-De @300k AVG | En-De Final | En-De Final AVG | De-En @300k | De-En @300k AVG | De-En Final | De-En Final AVG |
+  |-------+------------+-----------------+-------------+-----------------+-------------+-----------------+-------------+-----------------|
+  |       |            |                 |             |                 |             |                 |             |                 |
+  |-------+------------+-----------------+-------------+-----------------+-------------+-----------------+-------------+-----------------|
+  | Large |       27.6 |            27.7 |        28.1 |            28.4 |        29.5 |            30.0 |        30.9 |            31.3 |
+  | Base  |       22.4 |            22.4 |        23.7 |            23.7 |        27.7 |            28.1 |        29.8 |            30.3 |
+  | Small |       22.4 |            22.5 |        23.7 |            23.6 |        26.5 |            26.7 |        28.7 |            29.1 |
+  | Micro |       23.6 |            23.7 |        25.1 |            25.0 |        25.5 |            25.1 |        27.2 |            27.5 |
+  | Tiny  |       19.0 |            19.0 |        20.3 |            20.3 |        19.5 |            19.6 |        21.5 |            21.7 |
+  |-------+------------+-----------------+-------------+-----------------+-------------+-----------------+-------------+-----------------|
 
 
 * Decoding speed on efficiency data
@@ -141,7 +149,7 @@
   | Model   | Latency - CPU 1 Core (x10) | Latency - CPU 36 cores |
   |---------+----------------------------+------------------------|
   | AR Big  |                            |                        |
-  | AR Base |                            |                        |
+  | AR Base |                            |                  52087 |
   |---------+----------------------------+------------------------|
   | Large   |                      35013 |                  14542 |
   | Base    |                       9463 |                   3508 |
@@ -150,68 +158,120 @@
   | Tiny    |                       1581 |                    784 |
   |---------+----------------------------+------------------------|
 
+
+
 *** Throughput
 
   Different batch sizes on 36 cores
 
-  |---------+-----+------+------+------|
-  | Model   | b=8 | b=16 | b=32 | b=64 |
-  |---------+-----+------+------+------|
-  | AR Base |     |      |      |      |
-  |---------+-----+------+------+------|
-  | Large   |     |      |      | 8238 |
-  | Base    |     |      |      | 2934 |
-  | Small   |     |      |      | 1936 |
-  | Micro   |     |      |      | 1607 |
-  | Tiny    |     |      |      |  701 |
-  |---------+-----+------+------+------|
+  |---------+------|
+  | Model   | b=64 |
+  |---------+------|
+  | AR Base | 9370 |
+  |---------+------|
+  | Large   | 8238 |
+  | Base    | 2934 |
+  | Small   | 1936 |
+  | Micro   | 1607 |
+  | Tiny    |  701 |
+  |---------+------|
+
+*** Shortlist at 36 CPU cores
+
+    |---------+------+------+------+------+------+------+------|
+    | Batch   |    1 |    2 |    4 |    8 |   16 |   32 |   64 |
+    |---------+------+------+------+------+------+------+------|
+    | AR Big  |      |      |      |      |      |      |      |
+    | Ar Base |      |      |      |      |      |      |      |
+    |---------+------+------+------+------+------+------+------|
+    | Large   |      |      | 8245 | 7545 | 7434 | 7511 | 7639 |
+    | Base    | 2549 | 2298 | 2263 | 2306 | 2399 | 2503 | 2609 |
+    | Small   | 1346 | 1246 | 1250 | 1306 | 1399 | 1497 | 1606 |
+    | Micro   |  958 |  897 |  913 |  974 | 1062 | 1163 | 1271 |
+    | Tiny    |  244 |  246 |  273 |  316 |  373 |  437 |  506 |
+    |---------+------+------+------+------+------+------+------|
+
+
+
+
 
 ** GPU
 
 *** Latency
 
-    |---------+---------------------+---------------------|
-    | Model   | GPU Latency -- P100 | GPU Latency -- A100 |
-    |---------+---------------------+---------------------|
-    | AR Big  |                     |                     |
-    | AR Base |                     |                     |
-    |---------+---------------------+---------------------|
-    | Large   |                     |                     |
-    | Base    |                8720 |                     |
-    | Small   |                5017 |                     |
-    | Micro   |                3781 |                     |
-    | Tiny    |                1916 |                     |
-    |---------+---------------------+---------------------|
+    these are the same numbers as in throughput table column 1
+
+    |----------+---------------------+---------------------|
+    | Model    | GPU Latency -- P100 | GPU Latency -- A100 |
+    |----------+---------------------+---------------------|
+    | AR Large |                     |                     |
+    | AR Base  |                     |                     |
+    |----------+---------------------+---------------------|
+    | Large    |               14157 |                     |
+    | Base     |                8720 |                     |
+    | Small    |                5017 |                     |
+    | Micro    |                3781 |                     |
+    | Tiny     |                1916 |                     |
+    |----------+---------------------+---------------------|
 
 *** Throughput
 
-    P100 MAX LENGTH 100
+**** P100 MAX LENGTH 100
 
-  |------------+-------+------+-------+-------+------+------+------|
-  | Batch size |     1 |    4 |     8 |    16 |   32 |   64 |  128 |
-  |------------+-------+------+-------+-------+------+------+------|
-  | AR Base    | 52087 | 9370 | 18503 | 11087 | 6677 | 4503 | 3409 |
-  |------------+-------+------+-------+-------+------+------+------|
-  | Large      | 14157 | 8079 |  7003 |  6452 | 6056 | 5767 | 5581 |
-  | Base       |  8720 | 3875 |  3146 |  2769 | 2535 | 2394 | 2303 |
-  | Small      |  5017 | 2376 |  1977 |  1748 | 1635 | 1564 | 1512 |
-  | Micro      |  3781 | 1871 |  1579 |  1418 | 1343 | 1282 | 1248 |
-  | Tiny       |  1916 |  960 |   803 |   730 |  687 |  666 |  652 |
-  |------------+-------+------+-------+-------+------+------+------|
+     |-----------------+-------+-------+-------+-------+-------+-------+------+------|
+     | Batch size      |     1 |     2 |     4 |     8 |    16 |    32 |   64 |  128 |
+     |-----------------+-------+-------+-------+-------+-------+-------+------+------|
+     | AR Large        |       |       | 44838 | 26231 | 16741 | 11266 | 8926 | 7449 |
+     | AR Base (stdnt) |       | 61965 | 33957 | 18503 | 11087 |  6677 | 4503 | 3409 |
+     |-----------------+-------+-------+-------+-------+-------+-------+------+------|
+     | Large           | 14157 | 10285 |  8079 |  7003 |  6452 |  6056 | 5767 | 5581 |
+     | Base            |  8720 |  5532 |  3875 |  3146 |  2769 |  2535 | 2394 | 2303 |
+     | Small           |  5017 |  3270 |  2376 |  1977 |  1748 |  1635 | 1564 | 1512 |
+     | Micro           |  3781 |  2462 |  1871 |  1579 |  1418 |  1343 | 1282 | 1248 |
+     | Tiny            |  1916 |  1295 |   960 |   803 |   730 |   687 |  666 |  652 |
+     |-----------------+-------+-------+-------+-------+-------+-------+------+------|
 
 **** Export
 
      transposed for gnuplot:
 
-     | Batch size | AR Base | Large | Base | Small | Micro | Tiny |
-     |          1 |         | 14157 | 8720 |  5017 |  3781 | 1916 |
-     |          4 |         |  8079 | 3875 |  2376 |  1871 |  960 |
-     |          8 |   18503 |  7003 | 3146 |  1977 |  1579 |  803 |
-     |         16 |   11087 |  6452 | 2769 |  1748 |  1418 |  730 |
-     |         32 |    6677 |  6056 | 2535 |  1635 |  1343 |  687 |
-     |         64 |    4503 |  5767 | 2394 |  1564 |  1282 |  666 |
-     |        128 |    3409 |  5581 | 2303 |  1512 |  1248 |  652 |
+  | Batch size | AR Large | AR Base | Large | Base | Small | Micro | Tiny |
+  |          1 |          |         | 14157 | 8720 |  5017 |  3781 | 1916 |
+  |          2 |          |   61965 | 10285 | 5532 |  3270 |  2462 | 1295 |
+  |          4 |    44838 |   33957 |  8079 | 3875 |  2376 |  1871 |  960 |
+  |          8 |    26231 |   18503 |  7003 | 3146 |  1977 |  1579 |  803 |
+  |         16 |    16741 |   11087 |  6452 | 2769 |  1748 |  1418 |  730 |
+  |         32 |    11266 |    6677 |  6056 | 2535 |  1635 |  1343 |  687 |
+  |         64 |     8926 |    4503 |  5767 | 2394 |  1564 |  1282 |  666 |
+  |        128 |     7449 |    3409 |  5581 | 2303 |  1512 |  1248 |  652 |
 
+
+**** A100 MAX LENGTH 100
+
+     |-----------------+------+------+------+-------+------+------+------+------|
+     | Batch size      |    1 |    2 |    4 |     8 |   16 |   32 |   64 |  128 |
+     |-----------------+------+------+------+-------+------+------+------+------|
+     | Ar Large        |      |      |      |       |      |      | 3090 | 1918 |
+     | Ar Base (stdnt) |      |      |      | 13836 | 7498 | 3997 | 2371 | 1465 |
+     |-----------------+------+------+------+-------+------+------+------+------|
+     | Large           | 7020 | 3874 | 2292 |  1547 | 1179 |  973 |  850 |  782 |
+     | Base            | 6289 | 3400 | 1854 |  1166 |  816 |  635 |  542 |  485 |
+     | Small           | 3300 | 1860 | 1051 |   717 |  526 |  434 |  380 |  357 |
+     | Micro           | 2322 | 1345 |  833 |   544 |  433 |  367 |  332 |  311 |
+     | Tiny            | 1360 |  780 |  503 |   367 |  301 |  273 |  252 |  243 |
+     |-----------------+------+------+------+-------+------+------+------+------|
+
+**** Export
+
+     | Batch size | Ar Large | Ar Base (stdnt) | Large | Base | Small | Micro | Tiny |
+     |          1 |          |                 |  7020 | 6289 |  3300 |  2322 | 1360 |
+     |          2 |          |                 |  3874 | 3400 |  1860 |  1345 |  780 |
+     |          4 |          |                 |  2292 | 1854 |  1051 |   833 |  503 |
+     |          8 |          |           13836 |  1547 | 1166 |   717 |   544 |  367 |
+     |         16 |          |            7498 |  1179 |  816 |   526 |   433 |  301 |
+     |         32 |          |            3997 |   973 |  635 |   434 |   367 |  273 |
+     |         64 |     3090 |            2371 |   850 |  542 |   380 |   332 |  252 |
+     |        128 |     1918 |            1465 |   782 |  485 |   357 |   311 |  243 |
 
 * Old stuff
   The NAT models in these tables are with max-length set to 100. AR models are
