--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -54,7 +54,7 @@
 \usepackage[above,section]{placeins} % avoid figures pushed at end of chapters
 \usepackage{listings}
 
-
+\usepackage{subfig}
 \usepackage{tabularx}
 \usepackage{booktabs} % nicer lines in table
 \usepackage{multicol}
@@ -202,7 +202,7 @@ I understand that my work relates to the rights and obligations
   pursuant to Section~60 paragraph~1 of the Copyright Act.
 
 \vspace{2cm}
-\noindent Prague, \JH{datum}, 2021 \hspace{\fill}\theauthor\\ % doplňte patřičné datum, jméno a příjmení
+\noindent Prague, November 17, 2021 \hspace{\fill}\theauthor\\ % doplňte patřičné datum, jméno a příjmení
 
 %%%   Výtisk pak na tomto míste nezapomeňte PODEPSAT!
 %%%                                         *********
